# videodrome

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  tauri.conf.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  smoke-test.yml
capabilities/: default.json
docs/: WINDOWS.md  index.html  install.ps1  setup.sh
icons/: icon.icns
packaging/homebrew/: letterboxd-cli.rb.tmpl
packaging/homebrew-cask/: videodrome.rb.tmpl
packaging/scoop/: letterboxd-cli.json.tmpl  videodrome.json.tmpl
scripts/: bake-keys.sh  install-windows.ps1
src/: auth.rs  config.rs  credentials.rs  dismissed.rs  ffmpeg.rs  gui.rs  keychain.rs  keyframes.rs  letterboxd.rs  logging.rs  main.rs  preferences.rs  progress.rs  recommend.rs  stream.rs  subtitles.rs  tmdb.rs  tui.rs  watched.rs  winutil.rs
src/gui/: cache.rs  mod.rs
src/stream/: cache.rs  handle.rs  mod.rs  movie_progress.rs  resume.rs  server.rs  state.rs  vlc.rs
src/stream/hls/: argv.rs  evict.rs  grid.rs  job.rs  mod.rs  throttle.rs
src/torrents/: apibay.rs  eztv.rs  knaben.rs  mod.rs  release_name.rs  torrentio.rs  torznab.rs  yts.rs
ui/: index.html  package-lock.json  package.json  vitest.config.ts
ui/src/: index.css  main.tsx
ui/src/components/: AskSubsDialog.tsx  BackButton.tsx  ContextMenu.tsx  FiltersDropdown.tsx  HotkeyBar.tsx  MovieDetailModal.tsx  ResumeDialog.tsx  ScrollRestore.tsx  SearchBox.tsx  StreamPanel.tsx  SubsSheet.tsx  Toast.tsx  TopNav.tsx  TorrentDropOverlay.tsx
ui/src/lib/: api.test.ts  api.ts  hotkeys.ts  theme.test.ts  theme.ts
ui/src/lib/i18n/: de.ts  en.ts  es.ts  fr.ts  i18n.test.ts  index.ts  it.ts  pt.ts
ui/src/test/: setup.ts
ui/src/views/: DroppedTorrent.tsx  Home.tsx  Login.tsx  Player.tsx  Recommendations.tsx  Search.tsx  SearchResults.tsx  SeriesDetail.tsx  Settings.tsx  Torrents.tsx
ui/src/views/player/: StremioLoader.tsx  bars.tsx  controls.tsx  overlays.test.tsx  overlays.tsx  panels.tsx  useHlsAttach.test.ts  useHlsAttach.ts  useHotkeys.ts  useMediaControls.ts  useResumePosition.ts  useStreamLifecycle.ts  useSubtitles.ts  utils.test.ts  utils.ts
