[package]
name = "letterboxd-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "videodrome"
path = "src/main.rs"

[features]
# GUI (Tauri) es opt-in: solo se compila con `--features gui`. Así:
# * `cargo build --release` (CI, brew formula, scoop) → CLI + TUI puros,
#   sin dependencias de sistema (webkit, gtk, etc.) ni `ui/dist`.
# * `cargo tauri build` (release cask) → añade `--features gui` y
#   empaqueta el `.app` / `.dmg` con el frontend React embebido.
default = []
gui = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
dirs = "5"
indicatif = "0.17"
colored = "2"
ratatui = "0.29"
crossterm = "0.28"
futures = "0.3"
async-trait = "0.1"
urlencoding = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
librqbit = "8"
tempfile = "3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
