[package]
name = "videodrome"
version = "1.3.0"
edition = "2021"

[[bin]]
name = "videodrome"
path = "src/main.rs"

[features]
# GUI (Tauri) es opt-in: solo se compila con `--features gui`. Así:
# * `cargo build --release` (CI, brew formula, scoop) → CLI + TUI puros,
#   sin dependencias de sistema (webkit, gtk, etc.) ni `ui/dist`.
# * `cargo tauri build` (release cask) → añade `--features gui` y
#   empaqueta el `.app` / `.dmg` con el frontend React embebido.
default = []
gui = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-single-instance"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
dirs = "5"
indicatif = "0.17"
colored = "2"
ratatui = "0.29"
crossterm = "0.28"
futures = "0.3"
async-trait = "0.1"
urlencoding = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
librqbit = "8"
tempfile = "3"
axum = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
which = "6"
bytes = "1"
# Encoding detection para SRT/VTT. `chardetng` es el detector que usa
# Firefox (heurística estadística por frecuencia de bytes); `encoding_rs`
# es el crate oficial del WHATWG Encoding Standard con soporte para
# CP1252, ISO-8859-*, GBK, Big5, cyrillic, etc. Reemplazan la
# heurística casera Latin-1-fallback en `subtitles.rs`.
chardetng = "0.1"
encoding_rs = "0.8"
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
# Logging estructurado (audit): reemplaza `eprintln!` a stderr, que en
# Windows con subsistema GUI se pierde silenciosamente. `tracing` con
# un `WorkerGuard` no-blocking permite escribir a fichero desde el
# handler `axum` sin bloquear ni la respuesta HTTP ni el probe. La
# feature `local-time` da timestamps con hora de pared (útil para
# correlacionar el log con reports del user); si el crate `time` no
# está disponible fallback a `SystemTime` seguirá funcionando.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

# Unix: SIGSTOP/SIGCONT al pid de ffmpeg (transcode throttle §2 del
# audit "sparse+throttle+hwaccel"). `libc::kill` es la vía directa —
# `nix` sería más idiomático pero mete otra dep con features grandes
# para una llamada única.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows: lectura del registro para localizar VLC.exe si no está en
# PATH ni en las rutas estándar (`Program Files\VideoLAN\VLC`). El
# instalador oficial de VLC deja `HKLM\SOFTWARE\VideoLAN\VLC` con la
# ruta del binario como valor por defecto; scoop/choco no siempre.
[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[lints.clippy]
unwrap_used = "warn"
expect_used = "allow"
